--- a/index.html
+++ b/index.html
@@ -1,1 +1,271 @@
+<!DOCTYPE html>
+<html lang="fr">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Énigme Musicale</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        .music-container {
+            margin: 20px 0;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+        }
+
+        .solved {
+            background-color: #d4edda;
+            border-color: #c3e6cb;
+            animation: solved-animation 0.5s ease-in-out;
+        }
+
+        @keyframes solved-animation {
+            from {
+                transform: scale(1.05);
+                box-shadow: 0 0 15px rgba(40, 167, 69, 0.6);
+            }
+
+            to {
+                transform: scale(1);
+                box-shadow: none;
+            }
+        }
+
+        audio {
+            width: 100%;
+        }
+
+        input {
+            width: calc(100% - 20px);
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        input:disabled {
+            background-color: #e9ecef;
+            color: #495057;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:disabled {
+            background-color: #6c757d;
+        }
+
+        button:hover:not(:disabled) {
+            background-color: #0056b3;
+        }
+
+        p {
+            margin: 10px 0;
+        }
+
+        #success-message {
+            display: none;
+            margin-top: 20px;
+            padding: 20px;
+            border: 2px solid #28a745;
+            border-radius: 8px;
+            background-color: #d4edda;
+            color: #155724;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Énigme 3/4</h1>
+    <p>Écoutez les extraits ci-dessous et trouvez les trois titres présents dans la piste audio:</p>
+
+    <div id="music-list"></div>
+
+    <!-- Message de succès -->
+    <div id="success-message">
+        <h2>Félicitations ! 🎉</h2>
+        <p>Vous avez trouvés toutes les musiques. Votre nouvel indice est:</p>
+        <p style="font-size: 24px; font-weight: bold;">Le pianiste porte un chapeau Fedora, mais n'aime ni le jazz ni le
+            blues, son chiffre préféré est égal à la somme des autres chiffres recherchés.</p>
+    </div>
+
+    <script>
+        const musiques = [
+            { id: 1, fichier: "extrait1.mp3", reponses: ["Beautiful things", "Imagine", "I love you"] },
+            { id: 2, fichier: "extrait2.mp3", reponses: ["Vive le vent", "Petit garçon", "Petit papa noël"] },
+            { id: 3, fichier: "extrait3.mp3", reponses: ["Thunderstruck", "Smells like teen spirit", "Johnny b good"] },
+            { id: 4, fichier: "extrait4.mp3", reponses: ["Princesse Sarah", "Les mystérieuses cités d'or", "Pat Patrouille"] },
+            { id: 5, fichier: "extrait5.mp3", reponses: ["Au bout de mes rêves", "L'horloge tourne", "Chanson sur ma drôle de vie"] }
+        ];
+
+        let solvedCount = 0; // Compte le nombre de musiques résolues
+        const players = []; // Stocke les lecteurs audio
+
+        function initMusiques() {
+            const musicList = document.getElementById('music-list');
+            musiques.forEach((musique) => {
+                const container = document.createElement('div');
+                container.id = `music-${musique.id}`;
+                container.className = 'music-container';
+
+                const audio = document.createElement('audio');
+                audio.controls = true;
+                audio.src = musique.fichier;
+
+                // Ajoute un événement pour gérer la lecture
+                audio.addEventListener('play', () => pauseAllExcept(audio));
+                players.push(audio); // Ajoute le lecteur à la liste
+
+                container.appendChild(audio);
+
+                musique.reponses.forEach((_, index) => {
+                    const input = document.createElement('input');
+                    input.type = 'text';
+                    input.placeholder = `Titre ${index + 1}`;
+                    input.id = `input-${musique.id}-${index}`;
+
+                    container.appendChild(input);
+                });
+
+                const button = document.createElement('button');
+                button.innerText = 'Valider';
+                button.onclick = () => verifierReponses(musique.id);
+
+                const feedback = document.createElement('p');
+                feedback.id = `feedback-${musique.id}`;
+
+                container.appendChild(button);
+                container.appendChild(feedback);
+
+                musicList.appendChild(container);
+            });
+        }
+
+        // Met en pause tous les autres lecteurs sauf le lecteur actuellement lu
+        function pauseAllExcept(currentPlayer) {
+            players.forEach((player) => {
+                if (player !== currentPlayer) {
+                    player.pause();
+                }
+            });
+        }
+
+        // Calcul de la similarité entre deux chaînes
+        function similarite(str1, str2) {
+            const distance = levenshtein(str1.toLowerCase(), str2.toLowerCase());
+            const longueurMax = Math.max(str1.length, str2.length);
+            return (1 - distance / longueurMax) * 100;
+        }
+
+        // Distance de Levenshtein
+        function levenshtein(a, b) {
+            const matrix = [];
+            for (let i = 0; i <= b.length; i++) {
+                matrix[i] = [i];
+            }
+            for (let j = 0; j <= a.length; j++) {
+                matrix[0][j] = j;
+            }
+            for (let i = 1; i <= b.length; i++) {
+                for (let j = 1; j <= a.length; j++) {
+                    if (b.charAt(i - 1) === a.charAt(j - 1)) {
+                        matrix[i][j] = matrix[i - 1][j - 1];
+                    } else {
+                        matrix[i][j] = Math.min(
+                            matrix[i - 1][j - 1] + 1, // substitution
+                            matrix[i][j - 1] + 1,     // insertion
+                            matrix[i - 1][j] + 1      // suppression
+                        );
+                    }
+                }
+            }
+            return matrix[b.length][a.length];
+        }
+
+        // Vérifie les réponses pour une piste
+        function verifierReponses(id) {
+            const musique = musiques.find((m) => m.id === id);
+            const feedback = document.getElementById(`feedback-${id}`);
+            const container = document.getElementById(`music-${id}`);
+            let allCorrect = true;
+
+            // Initialise le tableau des réponses validées s'il n'existe pas encore
+            if (!musique.reponsesValidees) {
+                musique.reponsesValidees = [];
+            }
+
+            musique.reponses.forEach((_, index) => {
+                const input = document.getElementById(`input-${id}-${index}`);
+                const userValue = input.value.trim();
+
+                // Vérifie si la réponse a déjà été validée
+                if (musique.reponsesValidees.includes(userValue)) {
+                    // La réponse est déjà validée, on ne fait rien
+                    return;
+                }
+
+                // Vérifie si l'entrée correspond à une réponse non encore validée
+                let found = false;
+                for (let i = 0; i < musique.reponses.length; i++) {
+                    const reponse = musique.reponses[i];
+                    const similariteScore = similarite(userValue, reponse);
+
+                    if (similariteScore >= 70 && !musique.reponsesValidees.includes(reponse)) {
+                        // Si la réponse est correcte et non déjà validée
+                        musique.reponsesValidees.push(reponse); // Ajoute à la liste des réponses validées
+                        input.value = `${reponse} ✅`; // Ajoute l'emoji dans le champ
+                        input.disabled = true; // Désactive le champ
+                        found = true;
+                        break;
+                    }
+                }
+
+                // Si la réponse est incorrecte ou déjà validée, on garde le statut "incorrect"
+                if (!found) {
+                    allCorrect = false;
+                }
+            });
+
+            // Vérifie si toutes les réponses sont correctes
+            if (musique.reponsesValidees.length === musique.reponses.length) {
+                if (!container.classList.contains('solved')) {
+                    solvedCount++;
+                }
+                feedback.innerText = 'Tous les titres sont corrects !';
+                feedback.style.color = 'green';
+                container.classList.add('solved');
+
+                if (solvedCount === musiques.length) {
+                    afficherMessageDeSucces();
+                }
+            } else {
+                feedback.innerText = 'Certains titres sont incorrects, essayez encore.';
+                feedback.style.color = 'red';
+            }
+        }
+
+        function afficherMessageDeSucces() {
+            const successMessage = document.getElementById('success-message');
+            successMessage.style.display = 'block';
+        }
+
+        window.onload = () => {
+            initMusiques();
+        };
+    </script>
+</body>
+
+</html>
