--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
             border-color: #c3e6cb;
             animation: solved-animation 0.5s ease-in-out;
         }
+        
+        .shake {
+            animation: shake-animation 0.5s ease-in-out;
+        }
+
+        @keyframes shake-animation {
+            0% {
+                transform: translateX(0);
+            }
+
+            25% {
+                transform: translateX(-5px);
+            }
+
+            50% {
+                transform: translateX(5px);
+            }
+
+            75% {
+                transform: translateX(-5px);
+            }
+
+            100% {
+                transform: translateX(0);
+            }
+        }
 
         @keyframes solved-animation {
             from {
@@ -254,6 +280,11 @@
             } else {
                 feedback.innerText = 'Certains titres sont incorrects, essayez encore.';
                 feedback.style.color = 'red';
+                
+                container.classList.add('shake');
+                setTimeout(() => {
+                    container.classList.remove('shake');
+                }, 500); // Supprime l'animation après 500 ms
             }
         }
 
