--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Message de succès -->
     <div id="success-message">
         <h2>Félicitations ! 🎉</h2>
-        <p>Vous avez trouvés toutes les musiques. Votre nouvel indice est:</p>
+        <p>Vous avez trouvés toutes les musiques. Voici votre nouvel indice, prenez une screenshot si vous ne voulez pas le perdre::</p>
         <p style="font-size: 24px; font-weight: bold;">Le pianiste porte un chapeau Fedora, mais n'aime ni le jazz ni le
             blues, son chiffre préféré est égal à la somme des autres chiffres recherchés.</p>
     </div>
